--- a/style.css
+++ b/style.css
@@ -2,10 +2,15 @@
 
 * {
     box-sizing: border-box;
-}
-
-body {
     margin: 0;
     padding: 0;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+
+    
 
