--- a/style.css
+++ b/style.css
@@ -29,3 +29,33 @@ nav a {
     margin: 0 0.5rem;
 }
 
+#hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: teal;
+    padding: 2rem;
+    background: url(images/zebra-hero.jpg) no-repeat center;
+    background-size: cover;
+}
+
+#hero img {
+    width: 15vw;
+    border-radius: 50%;
+}
+
+#hero h1 {
+    font-family: 'bree serif', serif;
+    color: white;
+    font-size: 2.25rem;
+    font-weight: normal;
+    margin: 1rem 0;
+}
+
+.button {
+    font-family: lato, sans-serif;
+    text-decoration: none;
+    color: white;
+    border: 1px solid white;
+    padding: 0.5rem 1rem;
+}
