--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     flex-direction: column;
 }
 
+/* header */
 header {
     display: flex;
     justify-content: space-between;
@@ -29,13 +30,13 @@ nav a {
     margin: 0 0.5rem;
 }
 
+/* hero */
 #hero {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: teal;
     padding: 2rem;
-    background: url(images/zebra-hero.jpg) no-repeat center;
+    background: url(images/zebra-hero.jpg) #8980c2 no-repeat center;
     background-size: cover;
 }
 
@@ -52,10 +53,88 @@ nav a {
     margin: 1rem 0;
 }
 
+/* button */
 .button {
+    display: inline-block;
     font-family: lato, sans-serif;
     text-decoration: none;
-    color: white;
-    border: 1px solid white;
+    border: 1px solid;
     padding: 0.5rem 1rem;
 }
+
+.btn-white {
+    background-color: white;
+}
+
+.btn-purple {
+    background-color: #8980c2
+}
+/* main articles */
+main {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+    justify-content: space-around;
+}
+
+main h2 {
+    font-family: 'bree serif', serif;
+    font-size: 1.5rem;
+    font-weight: normal;
+    width: 100%;
+    text-align: center;
+    margin: 0 0 1rem;
+}
+
+main article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;  
+    padding: 0 2rem;
+      }
+
+main article img {
+    /* display: none; */
+    width: 100%;
+    border-radius: 50%;
+    border: 2px solid #8980c2;
+
+}
+
+main article h3 {
+    font-family: 'bree  serif', serif;
+    font-size: 1rem;
+    font-weight: normal;
+    text-align: center;
+    color: #8980c2;
+}
+
+main article p {
+    margin: 1rem 0;
+}
+
+/* social section */
+#social-links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #8980c2;
+    padding: 1rem 0;
+}
+
+#social-links p {
+    font-family: 'bree serif', serif;
+   margin: 0 0 1rem;
+}
+
+#social-links div div {
+   display:flex;
+  justify-content: space-between;
+
+}
+
+
+
+
+
